--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Glyphosate/Glyphosate_Absolute ED/MIs_Gly_GH_A101_DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Glyphosate/Glyphosate_Absolute ED/MIs_Gly_GH_A101_DR Percent Bio.Rmd
@@ -86,25 +86,25 @@ summary(model.LL4)
 getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
+mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL.4(), LL2.4(), LL.5(), LL2.5(), W1.2(), W2.2(), W1.3(), W1.3u(), W2.3(), W2.3u(), W1.4(), W2.4()))
 
 
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL.2 <- drm(percent_bio ~ rate, herb, fct = LL.2(), data = data_A101, type = "continuous")
+model.W2.3 <- drm(percent_bio ~ rate, herb, fct = W2.3(), data = data_A101, type = "continuous")
 
-plot(fitted(model.LL.2), residuals(model.LL.2))
+plot(fitted(model.W2.3), residuals(model.W2.3))
 
-qqnorm(residuals(model.LL.2))
-
-
-modelFit(model.LL.2)
-
-summary(model.LL.2)
+qqnorm(residuals(model.W2.3))
 
 
-anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
+modelFit(model.W2.3)
+
+summary(model.W2.3)
+
+
+anova(model.W2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
 
 ```
 
@@ -117,12 +117,11 @@ anova(model.LL.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.gly <- ED(model.LL.2, 0.5, clevel = "gly", type = "absolute", interval = "delta")
+ED50.gly <- ED(model.W2.3, (summary(model.W2.3)$coefficients[4, 1] * 0.5), clevel = "gly", type = "absolute", interval = "delta")
 
-ED50.gly.P450 <- ED(model.LL.2, 0.5, clevel = "gly+P450", type = "absolute", interval = "delta")
+ED50.gly.P450 <- ED(model.W2.3, (summary(model.W2.3)$coefficients[5, 1] * 0.5), clevel = "gly+P450", type = "absolute", interval = "delta")
 
-ED50.gly.GST <- ED(model.LL.2, 0.5, clevel = "gly+GST", type = "absolute", interval = "delta")
-
+ED50.gly.GST <- ED(model.W2.3, (summary(model.W2.3)$coefficients[6, 1] * 0.5), clevel = "gly+GST", type = "absolute", interval = "delta")
 
 # interval = "none" because it is a symmetric model. For asymmetric should use "delta"
 
@@ -135,25 +134,26 @@ ED50.gly.GST <- ED(model.LL.2, 0.5, clevel = "gly+GST", type = "absolute", inter
 
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
-
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[5, 1] * 0.5)), 
        compMatch = c("gly", "gly+P450"), type = "absolute", interval = "none", reverse = T)
 
 
-EDcomp(model.LL.2, c(0.5, 0.5), 
+EDcomp(model.W2.3, c((summary(model.W2.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.W2.3)$coefficients[6, 1] * 0.5)), 
        compMatch = c("gly", "gly+GST"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL.2, strVal = "b", operator = "-")
+compParm(model.W2.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL.2, strVal = "d", operator = "-")
+compParm(model.W2.3, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.LL.2, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -171,7 +171,7 @@ tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL.2,
+plot(model.W2.3,
      type = "average",
      xlab = expression(paste("Glyphosate rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A101 Biomass (x 100%)")),
@@ -191,7 +191,9 @@ plot(model.LL.2,
 points(x = c(ED50.gly[1, 1],
              ED50.gly.P450[1, 1],
              ED50.gly.GST[1, 1]),
-       y = c(0.5, 0.5, 0.5),
+       y = c((summary(model.W2.3)$coefficients[4, 1] * 0.5), 
+             (summary(model.W2.3)$coefficients[5, 1] * 0.5), 
+             (summary(model.W2.3)$coefficients[6, 1] * 0.5)),
        pch = 8,
        cex = 1.3)
 
