--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+P450_GC_A101_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+P450_GC_A101_ DR Percent Bio.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp MIs GC 2,4-D Biomass"
+title: "Waterhemp MIs GC Mesotrione Biomass"
 author: "Felipe Faleco"
 date: "10/25/2024"
 output:
@@ -26,12 +26,12 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2,4-D_GC.csv")
+data <- read.csv("Data Sheet_Meso_GC.csv")
 
 str(data)
 
 
-data.A101.24D.P450 <- data %>% filter(pop == "A101", herb == "2,4D+P450")
+data.A101.meso.P450 <- data %>% filter(pop == "A101", herb == "meso+P450")
 
 
 
@@ -40,7 +40,7 @@ fun <- function(x){
 }
 
 
-summary.A101.24D.P450 <- summaryBy(cbind(percent_bio) ~ pop + rate + temp + herb, data = subset(data.A101.24D.P450),
+summary.A101.meso.P450 <- summaryBy(cbind(percent_bio) ~ pop + rate + temp + herb, data = subset(data.A101.meso.P450),
           FUN=fun)
 
 
@@ -52,7 +52,7 @@ summary.A101.24D.P450 <- summaryBy(cbind(percent_bio) ~ pop + rate + temp + herb
 
 ```{r}
 
-model.LL4 <- drm(percent_bio ~ rate, temp, fct = LL.4(), data = data.A101.24D.P450, type = "continuous")
+model.LL4 <- drm(percent_bio ~ rate, temp, fct = LL.4(), data = data.A101.meso.P450, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -84,11 +84,10 @@ getMeanFunctions() # To get the most used functions when fitting dose-response c
 mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL.4(), LL2.4(), LL.5(), LL2.5(), W1.2(), W2.2(), W1.3(), W1.3u(), W2.3(), W2.3u(), W1.4(), W2.4()))
 
 
-
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.2 <- drm(percent_bio ~ rate, temp, fct = W1.2(), data = data.A101.24D.P450, type = "continuous")
+model.W1.2 <- drm(percent_bio ~ rate, temp, fct = W1.2(), data = data.A101.meso.P450, type = "continuous")
 
 
 
@@ -154,7 +153,7 @@ compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+P450_GC_A101_ DR Percent Bio.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+P450_GC_A101_ DR Percent Bio.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -163,7 +162,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.W1.2,
      type = "average",
-     xlab = expression(paste("2,4-D + P450 rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione + P450 rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 percent biomass (x 100%)")),
      ylim = c(0, 1),
      col = c("red", "darkgreen"),
@@ -172,7 +171,7 @@ plot(model.W1.2,
      cex.axis = 1.5,
      cex.lab = 2.0,
      cex.legend = 1.8,
-     legendPos = c(4000, 1),
+     legendPos = c(500, 1),
      lwd = 1.5)
 
 
