--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Everything_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Everything_GC_ DR Percent Bio.Rmd
@@ -189,7 +189,7 @@ compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED - Copy/MIs_2,4-D_GC_ DR Percent Bio.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Everything_GC_ DR Percent Bio.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -199,7 +199,7 @@ par(mar = c(5,5,1,1))
 plot(model.W1.2,
      type = "average",
      xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
-     ylab = expression(paste("A101 percent biomass (x 100%)")),
+     ylab = expression(paste("Percent biomass (x 100%)")),
      ylim = c(0, 1),
      col = c("darkgreen", "darkorange", "navy", "chocolate", "black", "darkmagenta", "red", "snow4"),
      pch = c(15, 0, 17, 23, 19, 2, 5, 1),
