--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/2023/Atrazine_Absolute ED_Multiple Comparisons/MIs_Atra Only_GC_ DR Percent Bio.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/2023/Atrazine_Absolute ED_Multiple Comparisons/MIs_Atra Only_GC_ DR Percent Bio.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Waterhemp MIs GC 2,4-D Biomass"
+title: "Waterhemp MIs GC Atrazine Percent Biomass"
 author: "Felipe Faleco"
 date: "10/25/2024"
 output:
@@ -26,12 +26,12 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2,4-D_GC.csv")
+data <- read.csv("Data Sheet_Atra_GC.csv")
 
 str(data)
 
 
-data.24D <- data %>% filter(herb == "2,4D")
+data.atra <- data %>% filter(herb == "atra")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x, na.rm = T), VAR = var(x, na.rm = T), SD = sd(x, na.rm = T), SE = std.error(x, na.rm = T), n = length(x))
 }
 
-summary <- summaryBy(cbind(percent_bio) ~ treat + rate, data = data.24D,
+summary <- summaryBy(cbind(percent_bio) ~ treat + rate, data = data.atra,
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary <- summaryBy(cbind(percent_bio) ~ treat + rate, data = data.24D,
 
 ```{r}
 
-model.LL4 <- drm(percent_bio ~ rate, treat, fct = LL.4(), data = data.24D, type = "continuous")
+model.LL4 <- drm(percent_bio ~ rate, treat, fct = LL.4(), data = data.atra, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -86,20 +86,20 @@ mselect(model.LL4,  list(LL.2(), LL2.2(), LL.3(), LL.3u(), LL2.3(), LL2.3u(), LL
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.2 <- drm(percent_bio ~ rate, treat, fct = W1.2(), data = data.24D, type = "continuous")
+model.W2.2 <- drm(percent_bio ~ rate, treat, fct = W2.2(), data = data.atra, type = "continuous")
 
 
-plot(fitted(model.W1.2), residuals(model.W1.2))
+plot(fitted(model.W2.2), residuals(model.W2.2))
 
-qqnorm(residuals(model.W1.2))
+qqnorm(residuals(model.W2.2))
 
                 
-modelFit(model.W1.2)
+modelFit(model.W2.2)
 
-summary(model.W1.2) 
+summary(model.W2.2) 
 
 
-anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+anova(model.W2.2, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -112,15 +112,15 @@ anova(model.W1.2, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.A82.24D.elevated <- ED(model.W1.2, 0.5, clevel = "A82+2,4D+elevated", type = "absolute", interval = "delta")
+ED50.A82.atra.elevated <- ED(model.W2.2, 0.5, clevel = "A82+atra+elevated", type = "absolute", interval = "delta")
 
-ED50.A82.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A82+2,4D+ambient", type = "absolute", interval = "delta")
+ED50.A82.atra.ambient <- ED(model.W2.2, 0.5, clevel = "A82+atra+ambient", type = "absolute", interval = "delta")
 
 
 
-ED50.A101.24D.elevated <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+elevated", type = "absolute", interval = "delta")
+ED50.A101.atra.elevated <- ED(model.W2.2, 0.5, clevel = "A101+atra+elevated", type = "absolute", interval = "delta")
 
-ED50.A101.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+ambient", type = "absolute", interval = "delta")
+ED50.A101.atra.ambient <- ED(model.W2.2, 0.5, clevel = "A101+atra+ambient", type = "absolute", interval = "delta")
 
 
 
@@ -136,27 +136,27 @@ ED50.A101.24D.ambient <- ED(model.W1.2, 0.5, clevel = "A101+2,4D+ambient", type 
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A82+2,4D+elevated", "A82+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
+EDcomp(model.W2.2, c(0.5, 0.5), 
+       compMatch = c("A82+atra+elevated", "A82+atra+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
-EDcomp(model.W1.2, c(0.5, 0.5), 
-       compMatch = c("A101+2,4D+elevated", "A101+2,4D+ambient"), type = "absolute", interval = "none", reverse = T)
+EDcomp(model.W2.2, c(0.5, 0.5), 
+       compMatch = c("A101+atra+elevated", "A101+atra+ambient"), type = "absolute", interval = "none", reverse = T)
 
 
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.2, strVal = "b", operator = "-")
+compParm(model.W2.2, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.2, strVal = "d", operator = "-")
+compParm(model.W2.2, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
+compParm(model.W2.2, strVal = "e", operator = "-") # Remember that for asymmetric models, the parameter"e" does not reflect the ED50. 
 
 
 ```
@@ -167,16 +167,16 @@ compParm(model.W1.2, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED_Multiple Comparisons/MIs_2,4-D Only_GC_ DR Percent Bio.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/2023/Atrazine_Absolute ED_Multiple Comparisons/MIs_Atra Only_GC_ DR Percent Bio.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.2,
+plot(model.W2.2,
      type = "average",
-     xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("Atrazine rate (g ae ha"^-1, ")")),
      ylab = expression(paste("Percent biomass (x 100%)")),
      ylim = c(0, 1),
      col = c("darkgreen", "darkgreen", "red", "red"),
@@ -186,15 +186,15 @@ plot(model.W1.2,
      cex.axis = 1.5,
      cex.lab = 2.0,
      cex.legend = 1.5,
-     legendPos = c(4000, 1),
+     legendPos = c(6000, 1),
      lwd = 1.5)
 
 
 
-points(x = c(ED50.A82.24D.elevated [1, 1],
-             ED50.A82.24D.ambient [1, 1],
-             ED50.A101.24D.elevated [1, 1],
-             ED50.A101.24D.ambient [1, 1]),
+points(x = c(ED50.A82.atra.elevated [1, 1],
+             ED50.A82.atra.ambient [1, 1],
+             ED50.A101.atra.elevated [1, 1],
+             ED50.A101.atra.ambient [1, 1]),
        y = c(0.5, 0.5, 0.5, 0.5),
        pch = 8,
        cex = 1.3)
